# apeGmsh

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  cantilever_solid_frame_coupling.ipynb  cantilever_solid_frame_gmsh.py  index.html  libegl1_1.4.0-1_amd64.deb  libglu1-mesa_9.0.2-1_amd64.deb  libglx-mesa0_23.2.1-1ubuntu3.1~22.04.3_amd64.deb  libopengl0_1.4.0-1_amd64.deb  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  docs.yml  tests.yml
acad/: 04.scd  Drawing1.iges.opt  frame_2D.bak  frame_2D.dwg  frame_2D.dwl  frame_2D.dwl2  frame_2D.dxf  frame_2D.geo  test_dxf_import.ipynb  test_dxf_import.py  tunelCircular.dwg
acad/SolidColumn/: SoildColumn_RevA.bak  SoildColumn_RevA.dwg  SoildColumn_RevA.dwl  SoildColumn_RevA.dwl2
api/: index.html
api-flows/: atlas.html  flows.json  index.html
api/constraints/: index.html
api/fem/: index.html
api/loads/: index.html
api/masses/: index.html
api/mesh/: index.html
api/model/: index.html
api/opensees/: index.html
api/parts/: index.html
api/results/: index.html
api/sections/: index.html
api/selection/: index.html
api/session/: index.html
api/viewers/: index.html
api/viz/: index.html
architecture/: apeGmsh_aesthetic.md  apeGmsh_architecture.md  apeGmsh_broker.md  apeGmsh_constraints.md  apeGmsh_groundTruth.md  apeGmsh_hinting.md  apeGmsh_loads.md  apeGmsh_navigation.md  apeGmsh_partInstanceAssemble.md  apeGmsh_principles.md  apeGmsh_results_obtaining.md  apeGmsh_results_viewer.md  apeGmsh_visualization.md  gmsh_api_reference.md  gmsh_basics.md  gmsh_geometry_basics.md  gmsh_interface.md  gmsh_meshing_advanced.md  gmsh_meshing_basics.md  gmsh_partitioning.md  gmsh_selection.md
architecture/apeGmsh_aesthetic/: index.html
architecture/apeGmsh_architecture/: index.html
architecture/apeGmsh_broker/: index.html
changelog/: index.html
concepts/: index.html
docs/: MIGRATION_v1.md  _hooks.py  architecture.md  guide_basics.md  guide_cad_import.md  guide_constraints.md  guide_fem_broker.md  guide_loads.md  guide_masses.md  guide_meshing.md  guide_partitioning.md  guide_parts_assembly.md  guide_parts_vs_session.md  guide_queries.md  guide_results.md  guide_sections.md  guide_selection.md  guide_transforms.md  index.md  plan_aesthetic.md  plan_fuse_group.md  plan_mesh_selection_set.md  plan_v2_final.md  plan_v2_unified_architecture.md  plan_viewer_box_select.md  plan_viewer_pg_persistence.md
examples/: 01_embedded_rebars.ipynb  02_cohesive_zones.ipynb  03_rc_slab.ipynb  04_building_shells.ipynb  CURRICULUM.md  cantilever_solid_frame_coupling.ipynb  cantilever_solid_frame_coupling.py  cantilever_solid_frame_gmsh.py  column_notebook.ipynb  cracked_beam_senb.py  cracked_rectangle_transfinite.py  example_1.ipynb  example_assembly.ipynb  example_beam_column_solid.ipynb  example_cantilever_brick_frame_coupling_viewer.ipynb  example_cantilever_pygmsh_brick_coupling_viewer.ipynb  example_cantilever_solid_frame_coupling_viewer.ipynb  example_column.py  example_frame3D_slab.ipynb  example_frame3D_slab_opensees.ipynb  example_frame3D_slab_opensees_v2.ipynb  example_gusset.ipynb  example_ibeam_buckling.ipynb  example_ibeam_modal.ipynb  example_ibeam_modal_paraview.ipynb  example_ibeam_nonlinear.ipynb  example_mesh_selection.ipynb  example_plate_basic.ipynb  example_plate_pyGmsh.ipynb  example_plate_pyGmsh.md  example_plate_viewer.ipynb  example_plate_viewer_v2.ipynb  example_solid.ipynb  example_tunel.ipynb  frame3D_slab_model.py  frame_pushover_from_cad.ipynb  frame_pushover_model.py  gusset.bak  gusset.dwg  gusset.dwl  (+7 more)
how-to/: index.html
internal_docs/: MIGRATION_v1.md  Results_architecture.md  architecture.md  design_brief_results_viewer.md  first_steps.md  guide_absorbing_boundary.md  guide_basics.md  guide_cad_import.md  guide_constraints.md  guide_fem_broker.md  guide_loads.md  guide_masses.md  guide_meshing.md  guide_obtaining_results.md  guide_opensees.md  guide_partitioning.md  guide_parts_assembly.md  guide_parts_vs_session.md  guide_queries.md  guide_recorders_reference.md  guide_results.md  guide_results_filtering.md  guide_sections.md  guide_selection.md  guide_selection_chain.md  guide_transforms.md  handoff_contact_leftovers_complete.md  handoff_contact_stack_followups_complete.md  handoff_equation_tie_adr0068.md  handoff_ladruno_coupling_followups.md  handoff_rebar_cage.md  plan_absorbing_skin_ab1.md  plan_aesthetic.md  plan_bezier_elements_integration.md  plan_bridge_load_consumption.md  plan_concurrent_geometries_s2.md  plan_concurrent_geometries_s4.md  plan_damping_integration.md  plan_docs_ia_blueprint.md  plan_docs_learnability.md  (+26 more)
paraview-flows/: flows.json  index.html
pyGmshViewer/: __init__.py  __main__.py  demo_generate_vtu.py  main_window.py  requirements.txt
scripts/: migrate_eos_legacy_api.py  sync_skill.py  wire_eos_notebook.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  run_pg_survival_test.py  test_assembly_compose_pipeline.py  test_basis.py  test_boolean_ops.py  test_boolean_parts_integration.py  test_boolean_tolerance.py  test_box_reconciliation.py  test_box_select_empty.py  test_box_select_window.py  test_brep_scene_silhouette.py  test_characterization_selection.py  test_compose_end_to_end.py  test_compose_facade.py  test_compose_rewrite.py  test_compose_schema_2_9_0.py  test_consistent_reduction.py  test_constraint_emission.py  test_constraint_emission_phase7b.py  test_constraint_mpc_math.py  test_constraint_resolver.py  test_constraints_bc.py  test_decoupled_nodes.py  test_derived_rotational.py  test_derived_scalars.py  test_displacements.py  test_entity_registry_bbox.py  test_entity_registry_pickable.py  test_face_map_required.py  test_fault_source.py  test_fem_cache_invalidation.py  test_fem_chain.py  test_fem_connectivity_guard.py  test_femdata_from_h5.py  test_femdata_to_h5.py  test_femdata_with_transforms.py  test_gauss_extrapolation.py  test_geometry_chain.py  test_geometry_cutting.py  test_geometry_primitives.py  (+156 more)
tutorials/: index.html
(+1263 files in other folders)
