[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apeGmsh"
version = "1.5.0"
description = "Gmsh wrapper for structural FEM workflows with parts, constraints, loads, mass, and OpenSees integration."
requires-python = ">= 3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicolás Mora Bowen", email = "nmorabowen@gmail.com"},
]

dependencies = [
    "gmsh",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
plot = ["matplotlib", "scipy"]
opensees = ["openseespy"]
vtk = []  # VTKExport uses only numpy + stdlib
dxf = ["ezdxf"]
viewer = ["PySide6>=6.5", "pyvista>=0.43", "pyvistaqt>=0.11", "vtk>=9.2", "qtpy"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = ["matplotlib", "scipy", "openseespy", "ezdxf",
       "PySide6>=6.5", "pyvista>=0.43", "pyvistaqt>=0.11", "vtk>=9.2", "qtpy"]

[project.scripts]
apegmsh-viewer = "apeGmshViewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["apeGmsh*", "apeGmshViewer*"]

[tool.setuptools.package-data]
apeGmsh = ["py.typed"]

[tool.pytest.ini_options]
# Prefer the in-tree source over any site-packages install. Matters when
# running pytest from a git worktree: the editable install points at the
# main checkout, so without this, pytest would silently test the wrong
# source tree.
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.10"
# Point pyright at the project's opensees_venv so Qt/PyVista imports resolve.
# Path is machine-specific — adjust (or move to a gitignored pyrightconfig.json)
# if the repo is cloned elsewhere.
venvPath = "C:/Users/nmora/venv"
venv = "opensees_venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
# qtpy re-exports PySide6/PyQt symbols lazily; the stubs flag every
# `from qtpy.QtGui import QAction` as a private-import access. The rule
# fundamentally conflicts with using qtpy as a Qt-binding abstraction.
reportPrivateImportUsage = false

# ─────────────────────────────────────────────────────────────────────
# mypy: the library ``src/apeGmsh/`` is strictly typed, but the
# standalone viewer app ``apeGmshViewer/`` is not (it's a Qt/PyVista
# application, not a library — the cost/benefit of strict typing is
# different).  Silence follow-imports into the viewer so that
# ``mypy src/apeGmsh/`` stays clean.
# ─────────────────────────────────────────────────────────────────────
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apeGmshViewer.*"
follow_imports = "skip"
ignore_errors = true

# ─────────────────────────────────────────────────────────────────────
# ruff: the curriculum notebooks under ``examples/EOS Examples/`` use
# compact single-line OpenSees analysis recipes (``ops.system(...);
# ops.numberer(...); ops.constraints(...)``) as a pedagogical pattern
# borrowed from the OpenSees community's tutorials. Silence E702 for
# those files only — library code stays strict.
# ─────────────────────────────────────────────────────────────────────
[tool.ruff.lint.per-file-ignores]
"examples/EOS Examples/**/*.py" = ["E702"]
