[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apeGmsh"
version = "2.0.0"
description = "Gmsh wrapper for structural FEM workflows with parts, constraints, loads, mass, and OpenSees integration."
requires-python = ">= 3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicolás Mora Bowen", email = "nmorabowen@gmail.com"},
]

dependencies = [
    "gmsh",
    "h5py",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
plot = ["matplotlib", "scipy"]
opensees = ["openseespy"]
vtk = []  # VTKExport uses only numpy + stdlib
dxf = ["ezdxf"]
# ADR 0042 R-C: trame/trame-vtk render the web/Jupyter TrameBackend
# (results.show_web); ipywidgets drives the in-notebook control panel
# (step slider + layer toggles); nest_asyncio2 lets pyvista launch the
# trame server inline (without it pyvista degrades to a static image).
# trame-vuetify provides trame.ui.vuetify3 / trame.widgets.vuetify3 — the
# SinglePageLayout + widgets for the standalone web app (results.serve_web);
# it is NOT pulled transitively by trame, so it must be listed explicitly.
# Folded into [viewer] rather than a hard base dep or a separate [web]
# extra — the whole render stack (pyvista/vtk/PySide6) is already an
# opt-in here, so one render-install story stays consistent.
viewer = ["PySide6>=6.5", "pyvista>=0.43", "pyvistaqt>=0.11", "vtk>=9.2", "qtpy",
          "trame>=3.0", "trame-vtk>=2.6", "trame-vuetify>=2.6",
          "ipywidgets>=8.0", "nest_asyncio2"]
animation = ["imageio>=2.30", "imageio-ffmpeg>=0.4"]
# Weighted-partitioning backends (Flavor B of g.mesh.partitioning.partition).
# pymetis: PyPI has Linux/macOS wheels. Windows must install via conda-forge
#   (`conda install -c conda-forge pymetis`) — there is no PyPI Windows wheel.
# nxmetis (networkx-metis): NOT on PyPI under any name. The upstream
#   github.com/networkx/networkx-metis is source-install only. Use a git URL:
#     pip install git+https://github.com/networkx/networkx-metis.git
#   Captured here as a comment, not as an installable extra, because pip
#   refuses VCS URLs inside extras-style requirement strings.
partition-pymetis = ["pymetis>=2023.1"]
partition-networkx = ["networkx>=3.0"]  # nxmetis itself: git-install separately
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = ["matplotlib", "scipy", "openseespy", "ezdxf",
       "PySide6>=6.5", "pyvista>=0.43", "pyvistaqt>=0.11", "vtk>=9.2", "qtpy",
       "trame>=3.0", "trame-vtk>=2.6", "trame-vuetify>=2.6",
       "ipywidgets>=8.0", "nest_asyncio2"]

[project.scripts]
apegmsh-viewer = "apeGmshViewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["apeGmsh*", "apeGmshViewer*"]

[tool.setuptools.package-data]
apeGmsh = ["py.typed"]

[tool.pytest.ini_options]
# The real suite lives under tests/. Restrict collection there so a bare
# ``pytest`` doesn't sweep in stray manual smoke scripts (e.g.
# acad/test_dxf_import.py runs apeGmsh + asserts at module scope, which
# would abort the whole collection).
testpaths = ["tests"]
# Prefer the in-tree source over any site-packages install. Matters when
# running pytest from a git worktree: the editable install points at the
# main checkout, so without this, pytest would silently test the wrong
# source tree.
pythonpath = ["src"]
# importlib import mode keeps test package names independent of any
# top-level Python module on the path. Required because
# ``tests/opensees/`` collides with the ``opensees.pyd`` extension
# shipped by the OpenSees binary install — without importlib mode,
# pytest would try to import the test package as ``opensees.<module>``
# and fail. importlib mode is also the modern pytest recommendation.
addopts = ["--import-mode=importlib"]
markers = [
    "live: requires openseespy",
    "subprocess: requires OPENSEES binary",
    "h5: HDF5 tests",
    "slow: > 1 second",
    "bench: opt-in performance benchmarks (run with `pytest -m bench`)",
]
# Silence specific MP-aware advisory warnings by default. These are
# legitimate user-facing nudges in interactive sessions (auto-emit of
# Transformation constraint handler / parallel numberer / parallel
# system when the user did not declare one; orphan-entity nudge on
# parts.fragment_all). They fire predictably across the test suite
# and inflate apparent failure counts under -W error::UserWarning
# without signalling real bugs. Use a tagged UserWarning subclass +
# ignore filter so users still see them and tests that explicitly
# assert them via pytest.warns(UserWarning, ...) keep working.
filterwarnings = [
    "ignore::apeGmsh.opensees.apesees.OpenSeesAutoEmitWarning",
    "ignore::apeGmsh.core._parts_fragmentation.UnregisteredPartEntityWarning",
]

[tool.pyright]
pythonVersion = "3.10"
# Point pyright at the project's opensees_venv so Qt/PyVista imports resolve.
# Path is machine-specific — adjust (or move to a gitignored pyrightconfig.json)
# if the repo is cloned elsewhere.
venvPath = "C:/Users/nmora/venv"
venv = "opensees_venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
# qtpy re-exports PySide6/PyQt symbols lazily; the stubs flag every
# `from qtpy.QtGui import QAction` as a private-import access. The rule
# fundamentally conflicts with using qtpy as a Qt-binding abstraction.
reportPrivateImportUsage = false

# ─────────────────────────────────────────────────────────────────────
# mypy: the library ``src/apeGmsh/`` is strictly typed, but the
# standalone viewer app ``apeGmshViewer/`` is not (it's a Qt/PyVista
# application, not a library — the cost/benefit of strict typing is
# different).  Silence follow-imports into the viewer so that
# ``mypy src/apeGmsh/`` stays clean.
# ─────────────────────────────────────────────────────────────────────
[tool.mypy]
ignore_missing_imports = true
# The rest of ``src/apeGmsh/`` (mesh, solvers, viewers, results, ...) is not
# yet strict-clean; followed imports out of the strictly-checked
# ``apeGmsh.opensees.*`` package would otherwise surface their pre-existing
# errors. "silent" still resolves types from those modules so opensees code
# is checked correctly — only the imported modules' own errors are hidden.
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "apeGmshViewer.*"
follow_imports = "skip"
ignore_errors = true

# ─────────────────────────────────────────────────────────────────────
# The new ``apeGmsh.opensees`` package is held to the strict bar per
# charter P12. Older modules in apeGmsh.* keep the looser global
# settings; this override scopes strict typing to the new code.
# ─────────────────────────────────────────────────────────────────────
[[tool.mypy.overrides]]
module = "apeGmsh.opensees.*"
# Per-module strict-mode flags. Mypy's per-module overrides accept a subset
# of strict's flags; warn_redundant_casts / strict_equality / extra_checks
# are global-only and live elsewhere if needed.
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# ─────────────────────────────────────────────────────────────────────
# ruff: the curriculum notebooks under ``examples/EOS Examples/`` use
# compact single-line OpenSees analysis recipes (``ops.system(...);
# ops.numberer(...); ops.constraints(...)``) as a pedagogical pattern
# borrowed from the OpenSees community's tutorials. Silence E702 for
# those files only — library code stays strict.
# ─────────────────────────────────────────────────────────────────────
[tool.ruff.lint.per-file-ignores]
"examples/EOS Examples/**/*.py" = ["E702"]
